crates/xifty-cli/tests/snapshots/cli_contract__extract_happy_mov_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "extract_json(\"happy.mov\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "isobmff",
    "detected_format": "mov",
    "path": "happy.mov"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "captured_at",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from movie header creation time"
            ]
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "created_at",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from movie header creation time"
            ]
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "modified_at",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from movie header modification time"
            ]
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T13:00:00"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "software",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "offset_end": 606,
            "offset_start": 570,
            "path": "quicktime_data"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyMovGen"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "author",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "offset_end": 570,
            "offset_start": 532,
            "path": "quicktime_data"
          }
        ],
        "value": {
          "kind": "string",
          "value": "Kai QuickTime"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.width",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from visual track header"
            ],
            "offset_end": 0,
            "offset_start": 0,
            "path": "moov/trak@64/tkhd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1920
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.height",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from visual track header"
            ],
            "offset_end": 0,
            "offset_start": 0,
            "path": "moov/trak@64/tkhd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1080
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "duration",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from mvhd or media track timing"
            ]
          }
        ],
        "value": {
          "kind": "float",
          "value": 12.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "codec.video",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from video track sample description"
            ]
          }
        ],
        "value": {
          "kind": "string",
          "value": "avc1"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "codec.audio",
        "sources": [
          {
            "container": "mov",
            "namespace": "quicktime",
            "notes": [
              "derived from audio track sample description"
            ]
          }
        ],
        "value": {
          "kind": "string",
          "value": "mp4a"
        }
      }
    ]
  },
  "report": {
    "conflicts": [],
    "issues": []
  },
  "schema_version": "0.1.0"
}
